fixed header alignment, and rectangle div

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -37,7 +37,7 @@ nav ul li {
 nav ul li a {
     color: black;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: bold;
     transition: color 0.3s;
     margin-right: 1.25em; /* 20px */
